<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.charleschen.appportfolio.MainActivity"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/title"
        android:text="@string/my_apps"
        android:textColor="#2E3D49"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/popular_movie"
        android:id="@+id/button"
        android:background="#2E3D49"
        android:textColor="@android:color/holo_orange_dark"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:onClick="sendResponse"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/stock_hawk"
        android:id="@+id/button2"
        android:background="#2E3D49"
        android:textColor="@android:color/holo_orange_dark"
        android:layout_below="@+id/button"
        android:layout_alignStart="@+id/button3"
        android:layout_marginTop="27dp"
        android:onClick="sendResponse"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/build_it_together"
        android:id="@+id/button3"
        android:background="#2E3D49"
        android:textColor="@android:color/holo_orange_dark"
        android:layout_below="@+id/button2"
        android:layout_alignStart="@+id/button4"
        android:layout_marginTop="23dp"
        android:onClick="sendResponse"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/make_your_app_material"
        android:id="@+id/button4"
        android:layout_marginTop="25dp"
        android:background="#2E3D49"
        android:textColor="@android:color/holo_orange_dark"
        android:layout_below="@+id/button3"
        android:layout_centerHorizontal="true"
        android:onClick="sendResponse"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/go_ubiquitous"
        android:id="@+id/button5"
        android:layout_marginTop="19dp"
        android:background="#2E3D49"
        android:textColor="@android:color/holo_orange_dark"
        android:layout_below="@+id/button4"
        android:layout_alignStart="@+id/button4"
        android:onClick="sendResponse"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/capstone"
        android:id="@+id/button6"
        android:background="#2E3D49"
        android:textColor="@android:color/holo_orange_dark"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/button5"
        android:layout_marginBottom="22dp"
        android:onClick="sendResponse"/>
</RelativeLayout>
